apollo-federation/src/sources/connect/expand/tests/snapshots/apollo_federation__sources__connect__expand__tests__it_expands_a_realistic_supergraph-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
---
{
    "connectors_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors.example http: Get /{$args.id!}",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.user),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "http://example",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Var(
                                    VariableExpression {
                                        var_path: "$args.id",
                                        batch_separator: None,
                                        required: true,
                                    },
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: [],
                body: None,
            },
        ),
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                    Field(
                        None,
                        "name",
                        None,
                    ),
                    Field(
                        None,
                        "username",
                        None,
                    ),
                    Field(
                        None,
                        "email",
                        None,
                    ),
                    Field(
                        None,
                        "address",
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        "street",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "suite",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "city",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "zipcode",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "geo",
                                        Some(
                                            SubSelection {
                                                selections: [
                                                    Field(
                                                        None,
                                                        "lat",
                                                        None,
                                                    ),
                                                    Field(
                                                        None,
                                                        "lng",
                                                        None,
                                                    ),
                                                ],
                                                star: None,
                                            },
                                        ),
                                    ),
                                ],
                                star: None,
                            },
                        ),
                    ),
                    Field(
                        None,
                        "phone",
                        None,
                    ),
                    Field(
                        None,
                        "website",
                        None,
                    ),
                    Field(
                        None,
                        "company",
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        "name",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "catchPhrase",
                                        None,
                                    ),
                                    Field(
                                        None,
                                        "bs",
                                        None,
                                    ),
                                ],
                                star: None,
                            },
                        ),
                    ),
                ],
                star: None,
            },
        ),
        entity: false,
        on_root_type: true,
    },
}
