apollo-federation/src/sources/connect/expand/tests/snapshots/apollo_federation__sources__connect__expand__tests__it_expands_a_realistic_supergraph-3.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: raw_sdl
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.3", for: EXECUTION) {
  query: Query
}

directive @link(url: String, as: String, for: link__Purpose, import: [link__Import]) repeatable on SCHEMA

directive @join__graph(name: String!, url: String!) on ENUM_VALUE

directive @join__type(graph: join__Graph!, key: join__FieldSet, extension: Boolean! = false, resolvable: Boolean! = true, isInterfaceObject: Boolean! = false) repeatable on ENUM | INPUT_OBJECT | INTERFACE | OBJECT | SCALAR | UNION

directive @join__field(graph: join__Graph, requires: join__FieldSet, provides: join__FieldSet, type: String, external: Boolean, override: String, usedOverridden: Boolean) repeatable on FIELD_DEFINITION | INPUT_FIELD_DEFINITION

directive @join__implements(graph: join__Graph!, interface: String!) repeatable on INTERFACE | OBJECT

directive @join__unionMember(graph: join__Graph!, member: String!) repeatable on UNION

directive @join__enumValue(graph: join__Graph!) repeatable on ENUM_VALUE

enum link__Purpose {
  """
  SECURITY features provide metadata necessary to securely resolve fields.
  """
  SECURITY
  """EXECUTION features provide metadata necessary for operation execution."""
  EXECUTION
}

scalar link__Import

scalar join__FieldSet

enum join__Graph {
  CONNECTORS_QUERY_USER_0 @join__graph(name: "connectors_Query_user_0", url: "none")
}

type AddressGeo @join__type(graph: CONNECTORS_QUERY_USER_0) {
  lat: Float @join__field(graph: CONNECTORS_QUERY_USER_0)
  lng: Float @join__field(graph: CONNECTORS_QUERY_USER_0)
}

type Address @join__type(graph: CONNECTORS_QUERY_USER_0) {
  city: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  geo: AddressGeo @join__field(graph: CONNECTORS_QUERY_USER_0)
  street: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  suite: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  zipcode: String @join__field(graph: CONNECTORS_QUERY_USER_0)
}

type CompanyInfo @join__type(graph: CONNECTORS_QUERY_USER_0) {
  bs: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  catchPhrase: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  name: String @join__field(graph: CONNECTORS_QUERY_USER_0)
}

type User @join__type(graph: CONNECTORS_QUERY_USER_0, key: "id") {
  address: Address @join__field(graph: CONNECTORS_QUERY_USER_0)
  company: CompanyInfo @join__field(graph: CONNECTORS_QUERY_USER_0)
  email: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  id: ID! @join__field(graph: CONNECTORS_QUERY_USER_0)
  name: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  phone: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  username: String @join__field(graph: CONNECTORS_QUERY_USER_0)
  website: String @join__field(graph: CONNECTORS_QUERY_USER_0)
}

type Query @join__type(graph: CONNECTORS_QUERY_USER_0) {
  user(id: ID!): User @join__field(graph: CONNECTORS_QUERY_USER_0)
}
