apollo-federation/src/sources/connect/expand/tests/snapshots/apollo_federation__sources__connect__expand__tests__it_expands_a_realistic_supergraph.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: api_schema
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Address {
  street: String
  suite: String
  city: String
  zipcode: String
  geo: AddressGeo
}

type AddressGeo {
  lat: Float
  lng: Float
}

type CompanyInfo {
  name: String
  catchPhrase: String
  bs: String
}

type Query {
  user(id: ID!): User
}

type User {
  id: ID!
  name: String
  username: String
  email: String
  address: Address
  phone: String
  website: String
  company: CompanyInfo
}
