apollo-federation/src/sources/connect/expand/tests/snapshots/apollo_federation__sources__connect__expand__tests__it_expands_steelthread_supergraph-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
---
{
    "connectors_Query_users_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.users),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "https://jsonplaceholder.typicode.com/",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Text(
                                    "users",
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: [],
                body: None,
            },
        ),
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                    Field(
                        None,
                        "name",
                        None,
                    ),
                ],
                star: None,
            },
        ),
        entity_resolver: None,
    },
    "connectors_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users/{$args.id!}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.user),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "https://jsonplaceholder.typicode.com/",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Text(
                                    "users",
                                ),
                            ],
                        },
                        ParameterValue {
                            parts: [
                                Var(
                                    VariableExpression {
                                        var_path: "$args.id",
                                        batch_separator: None,
                                        required: true,
                                    },
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: [],
                body: None,
            },
        ),
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        "id",
                        None,
                    ),
                    Field(
                        None,
                        "name",
                        None,
                    ),
                    Field(
                        None,
                        "username",
                        None,
                    ),
                ],
                star: None,
            },
        ),
        entity_resolver: Some(
            Explicit,
        ),
    },
    "connectors_User_d_1": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /users/{$this.c!}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(User.d),
                directive_name: "connect",
                directive_index: 1,
            },
        },
        transport: HttpJson(
            HttpJsonTransport {
                base_url: "https://jsonplaceholder.typicode.com/",
                path_template: URLPathTemplate {
                    path: [
                        ParameterValue {
                            parts: [
                                Text(
                                    "users",
                                ),
                            ],
                        },
                        ParameterValue {
                            parts: [
                                Var(
                                    VariableExpression {
                                        var_path: "$this.c",
                                        batch_separator: None,
                                        required: true,
                                    },
                                ),
                            ],
                        },
                    ],
                    query: {},
                },
                method: Get,
                headers: [],
                body: None,
            },
        ),
        selection: Path(
            Var(
                "$",
                Key(
                    Field(
                        "phone",
                    ),
                    Empty,
                ),
            ),
        ),
        entity_resolver: Some(
            Implicit,
        ),
    },
}
